apps: implement rss feed
